--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -47,14 +47,14 @@
             "problemMatcher": []
         },
         {
-            "label": "build and flash Higgs [Release]",
+            "label": "build Higgs [Release]",
             "type": "shell",
             "group": {
                 "kind": "test",
                 "isDefault": true
             },
             "linux": {
-                "command": "./Utils/flash.sh Higgs Release -r -b",
+                "command": "./Utils/build.sh Higgs Release",
                 "problemMatcher": "$gcc",
             },
             "presentation": {
@@ -62,11 +62,33 @@
             }
         },
         {
+            "label": "build and flash Higgs [Release]",
+            "type": "shell",
+            "group": {
+                "kind": "test",
+                "isDefault": true
+            },
+            "linux": {
+                "command": "./Utils/flash.sh Higgs Release -b",
+                "problemMatcher": "$gcc",
+            },
+            "presentation": {
+                "focus": true
+            }
+        },
+        {
+            "label": "kill openocd processes",
+            "type": "shell",
+            "linux": {
+                "command": "./Utils/killProcessesByPattern.sh openocd",
+            }
+        },
+        {
             "label": "preLaunchTaskHiggs",
             "type": "shell",
             "group": "test",
             "linux": {
-                "command": "./Utils/build.sh Higgs Debug; ./Utils/killProcessesByPattern.sh openocd",
+                "command": "./Utils/build.sh Higgs Debug",
                 "problemMatcher": "$gcc",
             }
         },
