--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,9 @@
         "locale": "cpp",
         "stack": "cpp",
         "cstdbool": "cpp",
-        "stm32f3xx_hal.h": "c"
+        "stm32f3xx_hal.h": "c",
+        "bit": "cpp",
+        "shared_mutex": "cpp"
     },
     "cmake.configureOnOpen": true,
     "C_Cpp.errorSquiggles": "Enabled",
