--- a/Modules/Higgs/openocd.cfg
+++ b/Modules/Higgs/openocd.cfg
@@ -6,14 +6,14 @@ set CHIPNAME stm32f303ret6
 set WORKAREASIZE 0x10000
 
 # Debug/Release/etc.
-if { [info exists TARGET] } {
-   set _TARGET $TARGET
+if { [info exists BUILD_TYPE] } {
+   set _BUILD_TYPE $BUILD_TYPE
 } else {
-   set _TARGET Debug
+   set _BUILD_TYPE Debug
 }
 
 source [find board/st_nucleo_f3.cfg]
 
 $_TARGETNAME configure -rtos FreeRTOS
 
-program Build/$_TARGET/Modules/Higgs/Higgs preverify verify reset
+program Build/$_BUILD_TYPE/Modules/Higgs/Higgs preverify verify reset
