refac: rextrack waveforms from abstract OscF32
Fib::Dsp namespace refactoring

--- a/Modules/Higgs/CMakeLists.txt
+++ b/Modules/Higgs/CMakeLists.txt
@@ -109,7 +109,9 @@ set(FIBSYS_CORE_SRC
 
 set(FIBSYS_DSP_SRC
     ${ROOT}/System/DSP/map.cpp
+    ${ROOT}/System/DSP/math.cpp
     ${ROOT}/System/DSP/oscillator.cpp
+    ${ROOT}/System/DSP/waveforms.cpp
 )
 
 set(FIBSYS_UTILITIES_SRC
