--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "Libraries/min"]
 	path = Libraries/min
 	url = https://github.com/min-protocol/min.git
+[submodule "System/Core/Libraries/magic_enum"]
+	path = System/Core/Libraries/magic_enum
+	url = https://github.com/Neargye/magic_enum.git
