--- a/modules/higgs/openocd.cfg
+++ b/modules/higgs/openocd.cfg
@@ -9,7 +9,7 @@ set WORKAREASIZE 0x10000
 if { [info exists BUILD_TYPE] } {
    set _BUILD_TYPE $BUILD_TYPE
 } else {
-   set _BUILD_TYPE Debug
+   set _BUILD_TYPE debug
 }
 
 source [find board/st_nucleo_f3.cfg]
